<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linear_v"
    android:background="@drawable/backgrounding"
    tools:context=".Interface.PhongBan.AddPhongBan">

    <TextView
        style="@style/tv_title"
        android:text="@string/themPB"/>
    <EditText
        style="@style/edttext"
        android:id="@+id/txtMaPhong"
        android:hint="@string/nhapMP"/>
    <EditText
        style="@style/edttext"
        android:id="@+id/txtTenPhong"
        android:hint="@string/nhapTP"/>
    <Button
        android:id="@+id/btnthemPB"
        style="@style/button"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/ic_baseline_room_24"
        android:text="@string/them"/>
</LinearLayout>