<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Interface.MainActivityChucNang">

    <TextView
        style="@style/tv_title"
        android:text="@string/chucnang" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            style="@style/button_model"
            android:id="@+id/btnDanhSachNV"
            android:text="@string/tieude_nv"
            android:layout_marginBottom="30dp"/>
        <Button
            style="@style/button_model"
            android:id="@+id/btnDanhSachPB"
            android:text="@string/danhsachPB"
            android:layout_marginBottom="30dp"/>
        <Button
            style="@style/button_model"
            android:id="@+id/btnDanhSachCC"
            android:text="@string/danhsachCC"
            android:layout_marginBottom="30dp"/>
        <Button
            style="@style/button_model"
            android:id="@+id/btnDanhSachTU"
            android:text="@string/danhsachTU"/>
    </LinearLayout>

</LinearLayout>