<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".Interface.NhanVien.MainActivityNhanVien">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/bannerhome"
        android:background="#0087EE"/>

    <LinearLayout
        style="@style/linear_h"
        android:layout_height="150dp"
        android:gravity="center_horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btnDSNhanVien"
            style="@style/button_img"
            android:layout_height="match_parent"
            android:background="@drawable/custom_button3"
            android:drawableTop="@drawable/salary"
            android:gravity="center"
            android:text="@string/employee_list" />

        <Button
            android:id="@+id/btnDSChamCong"
            style="@style/button_img"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/custom_button3"
            android:drawableTop="@drawable/pay"
            android:text="@string/checkout" />

        <Button
            android:id="@+id/btnDSTamUng"
            style="@style/button_img"
            android:layout_marginLeft="10dp"
            android:background="@drawable/custom_button3"
            android:drawableTop="@drawable/money"
            android:text="@string/advance_payment" />
    </LinearLayout>

    <LinearLayout
        style="@style/linear_h"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:layout_height="150dp"
        android:padding="5dp"
        >

        <Button
            android:id="@+id/btnThongKe"
            style="@style/button_img"
            android:background="@drawable/custom_button3"
            android:drawableTop="@drawable/budget"
            android:text="@string/summary" />

        <Button
            android:id="@+id/btnDepartment"
            style="@style/button_img"
            android:layout_marginLeft="10dp"
            android:background="@drawable/custom_button3"
            android:drawableTop="@drawable/desk"
            android:text="@string/danhsachPB"
            />

        <Button
            android:id="@+id/btnAboutUs"
            style="@style/button_img"
            android:layout_marginLeft="10dp"
            android:background="@drawable/custom_button3"
            android:drawableTop="@drawable/aboutus"
            android:text="@string/aboutus"
             />

    </LinearLayout>
</LinearLayout>