<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linear_v"
    android:background="@drawable/backgrounding"
    tools:context=".Interface.UpdateNhanVien">

    <TextView
        style="@style/tv_title"
        android:text="@string/tieude_update" />

    <TextView
        style="@style/tv_noidung"
        android:id="@+id/tvMa"/>

    <EditText
        android:id="@+id/txtTenNV"
        style="@style/edttext"
        android:hint="@string/tennv"
        android:inputType="text"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/txtNgaySinh"
            style="@style/edttext"
            android:layout_width="300dp"
            android:hint="@string/birth"
            android:inputType="date" />

        <ImageButton
            android:id="@+id/btnDatePicker"
            style="@style/button_model_view"
            android:src="@drawable/date"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rdiGioiTinh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <RadioButton
            style="@style/btn_radio"
            android:text="Nam"
            />

        <RadioButton
            style="@style/btn_radio"
            android:text="Nữ"
            android:layout_marginLeft="50dp"
            />
    </RadioGroup>

    <LinearLayout
        style="@style/linear_h"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/spTenPB"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/txtLuong"
        style="@style/edttext"
        android:hint="@string/luong"
        android:inputType="number"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/btnUpdate"
        style="@style/button"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:paddingLeft="10dp"
        android:background="@drawable/add12"
        android:drawableLeft="@drawable/ic_baseline_edit_24"
        android:text="@string/sua"/>
</LinearLayout>